@@ -593,13 +593,6 @@ operator|.
 name|getClauses
 argument_list|()
 decl_stmt|;
-name|Map
-name|booleanTerms
-init|=
-operator|new
-name|PositionCheckingMap
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -639,18 +632,11 @@ operator|.
 name|getQuery
 argument_list|()
 argument_list|,
-name|booleanTerms
-argument_list|)
-expr_stmt|;
-block|}
-block|}
 name|terms
-operator|.
-name|putAll
-argument_list|(
-name|booleanTerms
 argument_list|)
 expr_stmt|;
+block|}
+block|}
 block|}
 elseif|else
 if|if
@@ -846,13 +832,6 @@ operator|instanceof
 name|DisjunctionMaxQuery
 condition|)
 block|{
-name|Map
-name|disjunctTerms
-init|=
-operator|new
-name|PositionCheckingMap
-argument_list|()
-decl_stmt|;
 for|for
 control|(
 name|Iterator
@@ -885,17 +864,10 @@ operator|.
 name|next
 argument_list|()
 argument_list|,
-name|disjunctTerms
+name|terms
 argument_list|)
 expr_stmt|;
 block|}
-name|terms
-operator|.
-name|putAll
-argument_list|(
-name|disjunctTerms
-argument_list|)
-expr_stmt|;
 block|}
 elseif|else
 if|if
