@@ -407,19 +407,6 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|MultiTermQuery
-import|;
-end_import
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
 name|ConstantScoreRangeQuery
 import|;
 end_import
@@ -486,6 +473,19 @@ operator|.
 name|search
 operator|.
 name|MultiSearcher
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|search
+operator|.
+name|MultiTermQuery
 import|;
 end_import
 begin_import
@@ -1216,6 +1216,182 @@ expr_stmt|;
 block|}
 comment|// Not sure we can assert anything here - just running to check we dont
 comment|// throw any exceptions
+block|}
+comment|// LUCENE-1752
+DECL|method|testRepeatingTermsInMultBooleans
+specifier|public
+name|void
+name|testRepeatingTermsInMultBooleans
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|content
+init|=
+literal|"x y z a b c d e f g b c g"
+decl_stmt|;
+name|String
+name|ph1
+init|=
+literal|"\"a b c d\""
+decl_stmt|;
+name|String
+name|ph2
+init|=
+literal|"\"b c g\""
+decl_stmt|;
+name|String
+name|f1
+init|=
+literal|"f1"
+decl_stmt|;
+name|String
+name|f2
+init|=
+literal|"f2"
+decl_stmt|;
+name|String
+name|f1c
+init|=
+name|f1
+operator|+
+literal|":"
+decl_stmt|;
+name|String
+name|f2c
+init|=
+name|f2
+operator|+
+literal|":"
+decl_stmt|;
+name|String
+name|q
+init|=
+literal|"("
+operator|+
+name|f1c
+operator|+
+name|ph1
+operator|+
+literal|" OR "
+operator|+
+name|f2c
+operator|+
+name|ph1
+operator|+
+literal|") AND ("
+operator|+
+name|f1c
+operator|+
+name|ph2
+operator|+
+literal|" OR "
+operator|+
+name|f2c
+operator|+
+name|ph2
+operator|+
+literal|")"
+decl_stmt|;
+name|Analyzer
+name|analyzer
+init|=
+operator|new
+name|WhitespaceAnalyzer
+argument_list|()
+decl_stmt|;
+name|QueryParser
+name|qp
+init|=
+operator|new
+name|QueryParser
+argument_list|(
+name|f1
+argument_list|,
+name|analyzer
+argument_list|)
+decl_stmt|;
+name|Query
+name|query
+init|=
+name|qp
+operator|.
+name|parse
+argument_list|(
+name|q
+argument_list|)
+decl_stmt|;
+name|CachingTokenFilter
+name|stream
+init|=
+operator|new
+name|CachingTokenFilter
+argument_list|(
+name|analyzer
+operator|.
+name|tokenStream
+argument_list|(
+name|f1
+argument_list|,
+operator|new
+name|StringReader
+argument_list|(
+name|content
+argument_list|)
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Scorer
+name|scorer
+init|=
+operator|new
+name|SpanScorer
+argument_list|(
+name|query
+argument_list|,
+name|f1
+argument_list|,
+name|stream
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|Highlighter
+name|h
+init|=
+operator|new
+name|Highlighter
+argument_list|(
+name|this
+argument_list|,
+name|scorer
+argument_list|)
+decl_stmt|;
+name|h
+operator|.
+name|getBestFragment
+argument_list|(
+name|analyzer
+argument_list|,
+name|f1
+argument_list|,
+name|content
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Failed to find correct number of highlights "
+operator|+
+name|numHighlights
+operator|+
+literal|" found"
+argument_list|,
+name|numHighlights
+operator|==
+literal|7
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|testSimpleSpanPhraseHighlighting
 specifier|public
